<resources>
    <string name="app_name">MhyrFoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foodimage">FoodImage</string>
    <string name="search_your_food">Search your food...</string>
    <string name="foods">Foods</string>
    <string name="category_name">Category name</string>
    <string name="ingredients">Ingredients</string>
    <string name="measures">Measures</string>
    <string name="description">description</string>
</resources>