<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Food image section-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sectionImgFood"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        app:layout_constraintTop_toTopOf="parent">
        <!--Food image-->
        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/imgFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/foodimage"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />
        <!--Image cover-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:background="@color/blackFirst" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Filter section-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sectionFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/sectionImgFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sectionImgFood">
        <!--Filter spinner-->
        <Spinner
            android:id="@+id/filterSpinner"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/circle_bg"
            android:dropDownVerticalOffset="@dimen/_50sdp"
            android:elevation="@dimen/_2sdp"
            android:overlapAnchor="false"
            android:popupBackground="@drawable/circle_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--Search item-->
        <EditText
            android:id="@+id/edtFoodName"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_10sdp"
            android:autofillHints="Food name"
            android:background="@drawable/circle_bg"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="@dimen/_3sdp"
            android:drawableTint="#6E6E6E"
            android:elevation="@dimen/_3sdp"
            android:hint="@string/search_your_food"
            android:inputType="textShortMessage"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColorHint="#6E6E6E"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/filterSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sectionDisconnected"
        android:layout_width="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/sectionFilter"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/imgDisconnectedOrEmpty"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/disconnected"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/red" />
        <TextView
            android:id="@+id/txtDisconnectedOrEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please check your connection"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/imgDisconnectedOrEmpty"
            app:layout_constraintStart_toStartOf="@id/imgDisconnectedOrEmpty"
            app:layout_constraintEnd_toEndOf="@id/imgDisconnectedOrEmpty"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sectionAllContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sectionFilter">

        <!--Category section-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sectionCategory"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintTop_toTopOf="parent">
            <!--Category recycler-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCategory"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/category_item" />
            <!--Loader-->
            <ProgressBar
                android:id="@+id/loaderCategory"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Random food recycler-->
        <TextView
            android:id="@+id/txtFoods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_3sdp"
            android:text="@string/foods"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/sectionRandomFood"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sectionCategory" />

        <!--Random food section-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sectionRandomFood"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFoods">
            <!--Random food recycler-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerRandomFood"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingHorizontal="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/random_food_item" />
            <!--Food loader-->
            <ProgressBar
                android:id="@+id/loaderFood"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Empty list view-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/emptyLay"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="match_parent">

                <include layout="@layout/empty_list" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
